tests/neg-custom-args/captures/console-use-2/Test_2.scala
package test

object Test:
  Console.println("hello") // error

  def f() =
    Console.println("hello") // error

object Good uses Console uses_init Console:
  Console.println("hello")

  def f() =
    Console.println("hello")



